CFTemplate.yml
AWSTemplateFormatVersion: 2010-09-09
Resources:
  SNOWITOMVPC1:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 192.0.0.0/16
      InstanceTenancy: default
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'false'
      Tags:
        - Key: Name
          Value: ITOM-Public-1
  ITOMSUBNET1:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 192.0.64.0/18
      AvailabilityZone: ap-southeast-2b
      VpcId: !Ref SNOWITOMVPC1
      Tags:
        - Key: Name
          Value: ITOM-Subnet-2
  ITOMSUBNET2:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 192.0.0.0/18
      AvailabilityZone: ap-southeast-2a
      VpcId: !Ref SNOWITOMVPC1
      Tags:
        - Key: Name
          Value: ITOM-Subnet-1
  ITOMSUBNET3:
    Type: 'AWS::EC2::Subnet'
    Properties:
      CidrBlock: 192.0.128.0/17
      AvailabilityZone: ap-southeast-2c
      VpcId: !Ref SNOWITOMVPC1
      Tags:
        - Key: Name
          Value: ITOM-Subnet-3
  ITOMIGW1:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value: ITOM-Public-1-IGW
  ITOMDHCP1:
    Type: 'AWS::EC2::DHCPOptions'
    Properties:
      DomainName: ap-southeast-2.compute.internal
      DomainNameServers:
        - AmazonProvidedDNS
  ITOMACL1:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId: !Ref SNOWITOMVPC1
  ITOMRT1:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref SNOWITOMVPC1
      Tags:
        - Key: Name
          Value: ITOM-Public-1-RT
  MIDSERVER:
    Type: 'AWS::EC2::Instance'
    Properties:
      DisableApiTermination: 'false'
      InstanceInitiatedShutdownBehavior: stop
      ImageId: ami-08bd00d7713a39e7d
      InstanceType: t2.micro
      KeyName: ITOM
      Monitoring: 'false'
      Tags:
        - Key: Environment
          Value: Dev
        - Key: Name
          Value: MID SERVER
        - Key: Tier
          Value: '1'
      NetworkInterfaces:
        - DeleteOnTermination: 'true'
          Description: Primary network interface
          DeviceIndex: 0
          SubnetId: !Ref ITOMSUBNET2
          PrivateIpAddresses:
            - PrivateIpAddress: 192.0.59.237
              Primary: 'true'
          GroupSet:
            - !Ref sgCentOS7x8664withUpdatesHVM190101AutogenByAWSMP3
          AssociatePublicIpAddress: 'true'
  s3zipfilerepos:
    Type: 'AWS::S3::Bucket'
    Properties:
      AccessControl: Private
      VersioningConfiguration:
        Status: Suspended
  sgCentOS7x8664withUpdatesHVM190101AutogenByAWSMP3:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: >-
        This security group was generated by AWS Marketplace and is based on
        recommended settings for CentOS 7 (x86_64) - with Updates HVM version
        1901_01 provided by Centos.org
      VpcId: !Ref SNOWITOMVPC1
  acl4:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: 0.0.0.0/0
      Egress: 'true'
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId: !Ref ITOMACL1
  acl5:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: 0.0.0.0/0
      Protocol: '-1'
      RuleAction: allow
      RuleNumber: '100'
      NetworkAclId: !Ref ITOMACL1
  acl6:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      CidrBlock: 0.0.0.0/0
      Protocol: '6'
      RuleAction: allow
      RuleNumber: '101'
      PortRange:
        From: '22'
        To: '22'
      NetworkAclId: !Ref ITOMACL1
  subnetacl4:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      NetworkAclId: !Ref ITOMACL1
      SubnetId: !Ref ITOMSUBNET2
  subnetacl5:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      NetworkAclId: !Ref ITOMACL1
      SubnetId: !Ref ITOMSUBNET3
  subnetacl6:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      NetworkAclId: !Ref ITOMACL1
      SubnetId: !Ref ITOMSUBNET1
  gw2:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref SNOWITOMVPC1
      InternetGatewayId: !Ref ITOMIGW1
  route2:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref ITOMRT1
      GatewayId: !Ref ITOMIGW1
    DependsOn: gw2
  dchpassoc2:
    Type: 'AWS::EC2::VPCDHCPOptionsAssociation'
    Properties:
      VpcId: !Ref SNOWITOMVPC1
      DhcpOptionsId: !Ref ITOMDHCP1
  ingress2:
    Type: 'AWS::EC2::SecurityGroupIngress'
    Properties:
      GroupId: !Ref sgCentOS7x8664withUpdatesHVM190101AutogenByAWSMP3
      IpProtocol: tcp
      FromPort: '22'
      ToPort: '22'
      CidrIp: 0.0.0.0/0
  egress2:
    Type: 'AWS::EC2::SecurityGroupEgress'
    Properties:
      GroupId: !Ref sgCentOS7x8664withUpdatesHVM190101AutogenByAWSMP3
      IpProtocol: '-1'
      CidrIp: 0.0.0.0/0
Description: ServiceNow MID Server Deployment
